# NyteFileDB

./: .env  Cargo.toml  diesel.toml
db/: fdb.sqlite
migrations/2025-01-30-043603_create_files/: up.sql
src/: filewalker.rs  schema.rs
src/nytedb/: file_database.rs  main.rs
src/nytedb/common/: constants.rs
src/nytedb/database/: file_database.rs  mod.rs
