[package]
name = "nytefdb"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = "5.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.5.24", features = ["derive", "unstable-doc"] }
thiserror = "2.0.11"
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
diesel = { version = "2.2.6", features = ["sqlite"] }
dotenvy = "0.15.7"

[dev-dependencies]
tempfile = "3"

[lib]
name = "nytedb_lib"
path = "src/lib.rs"

[[bin]]
name = "nytedb"
path = "src/nytedb/main.rs"

[lints.clippy]
# Make the all group denied
all = { level = "deny", priority = -1 }

# Ignored some pedantic warnings
must_use_candidate = { level = "allow", priority = 1 }
module_name_repetitions = { level = "allow", priority = 1 }
missing_errors_doc = { level = "allow", priority = 1 }
missing_const_for_fn = { level = "allow", priority = 1 }

enum_glob_use = "warn"
nursery = "warn"
correctness = "warn"
complexity = "warn"
pedantic = "warn"
perf = "warn"
unwrap_used = "warn"
